# proofofscore

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  package-lock.json  playwright.config.ts
.sqlx/: query-0470e8476e77a8a7946657e698b2a754e5667b7077c27deb66f31fc58dac78c4.json  query-0b359078d8b0acb1a29281e44c46c05fe8e76072d2deeb78460a6234d999e222.json  query-15dd8eca631295b08b69c8c1cd3b3873e821e7a8ed7573dfeb9cb7517e0ef83c.json  query-216f9c390b2b759cbcd6a3a9ade58ce8ca24dcc2fac69ea70c283d6e2f231af7.json  query-25e3846e93eaf2512d648c260e07628d2b7d13eef3035f08aba591ecf61f7edb.json  query-484870d7efac63b106032dc254819508fffc3b9ee9f011e4ef44c70b1e90677f.json  query-5537f788316a8fab5852aa20620f4b8789ef369c5a5281d4ffee7fadc349d77e.json  query-5bc91da0ce3934d2f0a01ec677b0caded21fad926be62f897afff13c7b6b395e.json  (+19 more)
crates/game_engine/: Cargo.toml
crates/game_engine/src/: config.rs  engine.rs  fixed.rs  lib.rs  rng.rs  state.rs  wasm.rs
crates/server/: Cargo.toml  build.rs
crates/server/migrations/: 20260317000000_add_ledger.down.sql  20260317000000_add_ledger.up.sql  20260322000001_add_lightning_address.down.sql  20260322000001_add_lightning_address.up.sql
crates/server/src/: asset_hashes.rs  config.rs  daily_tasks.rs  invoice_watcher.rs  lib.rs  nostr_extractor.rs  secrets.rs  startup.rs
crates/server/src/domain/: mod.rs
crates/server/src/domain/games/: routes.rs
crates/server/src/domain/ledger/: mod.rs  routes.rs  service.rs  store.rs
crates/server/src/domain/payments/: routes.rs  store.rs
crates/server/src/domain/users/: routes.rs  store.rs
crates/server/src/lightning/: lnd.rs  lnurl.rs  mod.rs  service.rs
crates/server/src/routes/: admin.rs  mod.rs  public_ui.rs  ui.rs
crates/server/src/templates/: loader.js  mod.rs  styles.css
crates/server/src/templates/components/: auth.js  auth_modals.rs  game_canvas.js  htmx_auth.js  mod.rs  payment.js  profile.js  profile_modal.rs  replay_viewer.js
crates/server/src/templates/fragments/: leaderboard_rows.rs  mod.rs  nav.rs  payment_status.rs
crates/server/src/templates/layouts/: base.rs  mod.rs  navbar.rs
crates/server/src/templates/pages/: game.rs  home.rs  leaderboard.rs  mod.rs
crates/server/src/templates/static/: manifest.json
(+16 files in other folders)
